syntax = "proto3";

package ia.v1beta1;

option go_package = "api/managementpb/ia;iav1beta1";

import "github.com/mwitkow/go-proto-validators/validator.proto";

// TODO move it to parent directory / package once API is v1-stable

// ParamUnit represents template parameter unit.
enum ParamUnit {
  PARAM_UNIT_INVALID = 0;
  PERCENTAGE = 1;
}

// ParamType represents template parameter type.
enum ParamType {
  PARAM_TYPE_INVALID = 0;
  FLOAT = 1;
}

// FloatParam represents float parameter's default value and valid range.
message FloatParam {
  // True if default value is set.
  bool has_default = 1;
  // Default value if has_default is true.
  float default = 2;
  // True if minimal valid value is set.
  bool has_min = 3;
  // Minimal valid value (inclusive) if has_min is true.
  float min = 4;
  // True if maximal valid value is set.
  bool has_max = 5;
  // Maximal valid value (inclusive) if has_max is true.
  float max = 6;
}

// Param repsesents a single template parameter.
message Param {
  // Machine-readable name (ID) that is used in expression.
  string name = 1 [
    (validator.field) = {
      string_not_empty: true
    }
  ];
  // Human-readable parameter description.
  string help = 2 [
    (validator.field) = {
      string_not_empty: true
    }
  ];
  // Parameter unit.
  ParamUnit unit = 3;
  // Parameter type.
  ParamType type = 4;
  // Parameter value.
  oneof value {
    // Float value.
    FloatParam float = 5;
  }
}
